--- a/OC/config.plist
+++ b/OC/config.plist
@@ -781,13 +781,13 @@
                 <key>AdviseFeatures</key>
                 <false/>
                 <key>MLB</key>
-                <string>C02039501GULNV98C</string>
+                <string>C02943102CDLNV9FB</string>
                 <key>MaxBIOSVersion</key>
                 <false/>
                 <key>ProcessorType</key>
                 <integer>0</integer>
                 <key>ROM</key>
-                <data>MvkZ/Oui</data>
+                <data>oTT9Ml0W</data>
                 <key>SpoofVendor</key>
                 <true/>
                 <key>SystemMemoryStatus</key>
@@ -795,9 +795,9 @@
                 <key>SystemProductName</key>
                 <string>iMac19,1</string>
                 <key>SystemSerialNumber</key>
-                <string>C02DG01AJV3Q</string>
+                <string>C02ZLJY0JV3Q</string>
                 <key>SystemUUID</key>
-                <string>B5251718-2F16-473B-9644-963E6F895CBC</string>
+                <string>35C2D5F8-91ED-4F4F-88E1-98E0E5C1EC57</string>
             </dict>
             <key>UpdateDataHub</key>
             <true/>
